# zencodec-types

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  Cargo.toml  DESIGN-multi-image.md  FEEDBACK.md  README.md  TODOS.md  downstream.md  io-ideas.md  lifetime.md  spec.md  streaming.md  thoughts.md
.github/workflows/: ci.yml
docs/: CONSUMING.md  DESIGN.md  IMPLEMENTING.md  spec.md
examples/: audit_magic.rs  gen_moxcms_profiles.rs  verify_via_moxcms.rs
scripts/: fetch-profiles.sh  mega_test.rs  rec2020_all.rs  rec2020_deep.rs  verify_hashes.rs  verify_trc.rs
src/: buffer.rs  capabilities.rs  color.rs  convert.rs  cost.rs  detect.rs  error.rs  format.rs  gainmap.rs  helpers.rs  icc.rs  info.rs  lib.rs  limits.rs  metadata.rs  negotiate.rs  orientation.rs  output.rs  pixel.rs  planar.rs  policy.rs  sink.rs  streaming.rs  traits.rs
src/format/: builtins.rs  mod.rs
src/helpers/: exif.rs  icc.rs  icc_table_gray.inc  icc_table_rgb.inc  mod.rs
src/traits/: decoder.rs  decoding.rs  dyn_decoding.rs  dyn_encoding.rs  encoder.rs  encoding.rs  mod.rs  unsupported.rs
tests/: comprehensive.rs  icc_srgb.rs  pnm_roundtrip.rs
tests/mock_anim/: mod.rs
tests/pnm/: mod.rs
