[package]
name = "zencodec"
version = "0.1.11"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0 OR MIT"
description = "Shared traits and types for zen* image codecs"
categories = ["multimedia::images"]
keywords = ["image", "codec", "traits"]
repository = "https://github.com/imazen/zencodec"
exclude = ["CLAUDE.md", "docs/"]

[lib]
name = "zencodec"

[dependencies]
zenpixels = { version = "0.2.1" }
almost-enough = { version = "0.4.3", default-features = false, features = ["alloc"] }
enough = "0.4.3"
whereat = "0.1.5"

[dev-dependencies]
thiserror = "2"
walkdir = "2.5.0"
rayon = "1.10.0"
