[package]
name = "zencodec"
version = "0.1.13"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0 OR MIT"
description = "Shared traits and types for zen* image codecs"
categories = ["multimedia::images"]
keywords = ["image", "codec", "traits"]
repository = "https://github.com/imazen/zencodec"
exclude = ["CLAUDE.md", "CONTEXT-HANDOFF.md", "FEEDBACK.md", ".claude/", ".superwork/", ".zenbench/", "copter-report/", ".github/", "Cross.toml", "justfile", "Cargo.toml.original.txt", "docs/", "fuzz/"]

[lib]
name = "zencodec"

[dependencies]
zenpixels = { version = "0.2.2" }
almost-enough = { version = "0.4.3", default-features = false, features = ["alloc"] }
enough = "0.4.3"
whereat = { version = "0.1.5"}

[dev-dependencies]
thiserror = "2"
walkdir = "2.5.0"
rayon = "1.10.0"
