[package]
name = "zencodec"
version = "0.1.18"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MIT"
description = "Shared traits and types for zen* image codecs"
categories = ["multimedia::images"]
keywords = ["image", "codec", "traits"]
repository = "https://github.com/imazen/zencodec"
include = [
    "/src/**",
    "/tests/**",
    "/examples/**",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE*",
]

[lib]
name = "zencodec"

[dependencies]
zenpixels = { version = "0.2.8", features = ["icc"] }
almost-enough = { version = "0.4.4", default-features = false, features = ["alloc"] }
enough = "0.4.4"
whereat = { version = "0.1.5"}

[dev-dependencies]
thiserror = "2"
walkdir = "2.5.0"
rayon = "1.10.0"
moxcms = { version = "0.8.1", features = ["options"] }
